docs: abbreviation hint

--- a/document/sections/abbreviations.tex
+++ b/document/sections/abbreviations.tex
@@ -3,6 +3,6 @@
 }
 \newcommand{\refAbbreviation}[1]{\refWithLabel{#1}{abbrev}}
 
-\begin{tabular}{ll}
+\begin{tabular}{ll} % TODO: if there are some longer abbreviations that span over several lines, use `p{3cm}p{12.5cm}' instead of `ll'
 	\defAbbreviation{...}{...}
 \end{tabular}
