--- a/document/sections/foreword.tex
+++ b/document/sections/foreword.tex
@@ -1,3 +1,11 @@
-\paragraph{... some header ...:} ... some text ...
+\paragraph{Gender-Disclaimer:} Zur besseren Lesbarkeit werden in diesem Dokument ohne Diskriminierungsabsicht Begriffe wie ``Antragsteller'' verwendet, womit Personen jeglicher Geschlechterkategorie gemeint sind.\\[2cm]
 
-% TOOD: add a foreword if needed
+\paragraph{Eidesstattliche Erklärung:} Ich erkläre hiermit, dass ich die vorliegende Arbeit selbstständig, ausschließlich unter Verwendung der angegebenen Quellen und Hilfsmittel angefertigt habe. Aus fremden Quellen übernommene Gedanken sind als solche kenntlich gemacht. Die Arbeit wurde bisher in keiner Form einer anderen Prüfungskommission vorgelegt oder veröffentlicht.\\[1cm]
+
+\begin{table}[H]
+	\centering
+	\begin{tabular}{p{5cm}p{5cm}r}
+		\hline
+		Ort, Datum & \hspace*{5cm} & Unterschrift
+	\end{tabular}
+\end{table}
