feat: change appendix ref label

--- a/document/sections/content.tex
+++ b/document/sections/content.tex
@@ -1,4 +1,4 @@
-\newcommand{\refToAppendix}[1]{\hyperref[appendix:#1]{Appendix #1}}
+\newcommand{\refToAppendix}[1]{\hyperref[appendix:#1]{Anhang #1}}
 
 \include{sections/contentSections/introduction.tex}
 % TODO: add further content sections here
