feat: example introduction

--- a/document/sections/contentSections/introduction.tex
+++ b/document/sections/contentSections/introduction.tex
@@ -1,5 +1,17 @@
-\section{Introduction}\label{sec:introduction}
+\section{Einleitung}\label{sec:introduction}
 
-\subsection{...}\label{sec:introduction:...}
+\subsection{Motivation}\label{sec:introduction:motivation}
 
-...
+% TODO
+
+\subsection{Ziel}\label{sec:introduction:ziel}
+
+% TODO
+
+\subsection{Vorgehen}\label{sec:introduction:vorgehen}
+
+% TODO
+
+\subsection{Methodik}\label{sec:introduction:methodik}
+
+% TODO
