docs(bibliography): citavi hint

--- a/document/bibliography.bib
+++ b/document/bibliography.bib
@@ -1,1 +1,5 @@
 % Insert bibliography here
+% If using Citavi for managing references, the bibliography can be exported via "File -> Export".
+% Make sure to select "BibLaTeX" for the export format as this includes all required fields.
+% Always check the acronyms of the sources after exporting as Citavi sometimes changes the order of some references and therefore may switch elements in the list.
+% Therefore, usage of Git is advised to check new versions of the bibliography!
